[package]
name = "provenance-docs"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/cochranblock/provenance-docs"
homepage = "https://cochranblock.org"
default-run = "provenance-docs"

[features]
default = []
tests = ["exopack", "dep:tokio"]

[lib]
name = "provenance_docs"
path = "src/lib.rs"

[[bin]]
name = "provenance-docs"
path = "src/main.rs"

[[bin]]
name = "provenance-docs-test"
path = "src/bin/provenance-docs-test.rs"
required-features = ["tests"]

[dependencies]
nix = { version = "0.31", features = ["signal", "process"] }
exopack = { path = "../exopack", optional = true, features = ["triple_sims"] }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
